--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         <a target="_blank" href="./lesson-8/index.html">ДЗ №8</a>
       </h2>
     </li>
+    <li>
+      <h2>
+        <a target="_blank" href="./lesson-9/index.html">ДЗ №9</a>
+      </h2>
+    </li>
   </ol>
 </body>
 
