--- a/lesson-9/tasks/task10.html
+++ b/lesson-9/tasks/task10.html
@@ -21,12 +21,7 @@
 
     const listPrices = [550, 320, 200, 1100, 500, 900]
     const tax = 0.2
-    let listTaxPrice = []
-
-    for (const price of listPrices) {
-      const taxPrice = price * tax
-      listTaxPrice.push(Math.ceil(taxPrice))
-    }
+    let listTaxPrice = listPrices.map(elem => Math.ceil(elem * tax))
     document.write(listTaxPrice)
 
   </script>
