--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
         <a target="_blank" href="./lesson-9/index.html">ДЗ №9</a>
       </h2>
     </li>
+    <li>
+      <h2>
+        <a target="_blank" href="./lesson-10/index.html">ДЗ №10</a>
+      </h2>
+    </li>
   </ol>
 </body>
 
