--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
         <a target="_blank" href="./lesson-10/index.html">ДЗ №10</a>
       </h2>
     </li>
+    <li>
+      <h2>
+        <a target="_blank" href="./lesson-11/index.html">ДЗ №11</a>
+      </h2>
+    </li>
   </ol>
 </body>
 
