--- a/lesson-11/tasks/task3.html
+++ b/lesson-11/tasks/task3.html
@@ -59,6 +59,26 @@
     }
     game();
 
+    // let arr = [2, 1, 3, 4, 2, 1]
+
+    // function bubbleSort(arr) {
+    //   for (var i = 0, endI = arr.length - 1; i < endI; i++) {
+    //     var wasSwap = false;
+    //     for (var j = 0, endJ = endI - i; j < endJ; j++) {
+    //       if (arr[j] > arr[j + 1]) {
+    //         var swap = arr[j];
+    //         arr[j] = arr[j + 1];
+    //         arr[j + 1] = swap;
+    //         wasSwap = true;
+    //       }
+    //     }
+    //     if (!wasSwap) break;
+    //   }
+    //   return arr;
+    // }
+
+    // console.log(bubbleSort(arr))
+
   </script>
 
 </body>
