--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
         <a target="_blank" href="./lesson-11/index.html">ДЗ №11</a>
       </h2>
     </li>
+    <li>
+      <h2>
+        <a target="_blank" href="./lesson-12/index.html">ДЗ №12</a>
+      </h2>
+    </li>
   </ol>
 </body>
 
