--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <h1>Виконані домашні завдання Іванюк А.В.</h1>
-  <ol>
+  <ul>
     <li>
       <h2>
         <a target="_blank" href="./lesson-2/index.html">ДЗ №2</a>
@@ -72,7 +72,17 @@
         <a target="_blank" href="./lesson-12/index.html">ДЗ №12</a>
       </h2>
     </li>
-  </ol>
+    <li>
+      <h2>
+        <a target="_blank" href="./lesson-13/index.html">ДЗ №13</a>
+      </h2>
+    </li>
+    <li>
+      <h2>
+        <a target="_blank" href="./lesson-14/index.html">ДЗ №14</a>
+      </h2>
+    </li>
+  </ul>
 </body>
 
 
