--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
         <a target="_blank" href="./lesson-14/index.html">ДЗ №14</a>
       </h2>
     </li>
+    <li>
+      <h2>
+        <a target="_blank" href="./lesson-15/index.html">ДЗ №15</a>
+      </h2>
+    </li>
   </ul>
 </body>
 
