--- a/lesson-15/tasks/task4.html
+++ b/lesson-15/tasks/task4.html
@@ -35,20 +35,6 @@
 
   <script>
 
-    let arrObj = [
-      {
-        image: `<img src="./img_task4/img1.jpg" alt="Image">`,
-        linkSite: `<a href="https://ex-fs.net/serials/119385-follaut.html">link</a>`
-      },
-      {
-        image: `<img src="./img_task4/img2.jpg" alt="Image">`,
-        linkSite: `<a href="https://ex-fs.net/film/119124-sled-killera.html">link</a>`
-      },
-      {
-        image: `<img src="./img_task4/img3.jpg" alt="Image">`,
-        linkSite: `<a href="https://ex-fs.net/film/115221-nefarius.html">link</a>`
-      }
-    ]
 
 
     class Baner {
@@ -74,10 +60,25 @@
       }
     }
 
+    let arrObj = [
+      {
+        image: `<img src="./img_task4/img1.jpg" alt="Image">`,
+        linkSite: `<a href="https://ex-fs.net/serials/119385-follaut.html">link</a>`
+      },
+      {
+        image: `<img src="./img_task4/img2.jpg" alt="Image">`,
+        linkSite: `<a href="https://ex-fs.net/film/119124-sled-killera.html">link</a>`
+      },
+      {
+        image: `<img src="./img_task4/img3.jpg" alt="Image">`,
+        linkSite: `<a href="https://ex-fs.net/film/115221-nefarius.html">link</a>`
+      }
+    ]
+
     let baner1 = new Baner(arrObj)
     //Випадковий вибор об’єкта
     console.log(baner1.getRandomObjectArr());
-    //Ввід випадкового банера
+    //Вивід випадкового банера
     baner1.showRandBaner()
 
 
